<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:padding="10dp"
    android:background="@drawable/login">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/lightgrayline">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="5dp"
            android:background="@color/lightgrayline">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/insteka"
                android:padding="20dp" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:id="@+id/mUnduhFile"
            android:onClick="UnduhFile"
            android:layout_height="190dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:background="@drawable/circleblue"
                    android:src="@drawable/ic_attach_file_black_24dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/unduh_file"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:background="@color/lightgrayline"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/unduh_file_terkait_pendaftaran"
                    android:padding="5dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:id="@+id/mInputFormulir"
            android:onClick="inputForm"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:background="@drawable/circleyellow"
                    android:src="@drawable/ic_attach_file_black_24dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/input_formulir"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:background="@color/lightgrayline"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pengisian_form_daftar_ulang"
                    android:padding="5dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:id="@+id/mSyarat"
            android:onClick="sSyarat"
            android:layout_height="190dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:background="@drawable/circlepurple"
                    android:src="@drawable/ic_attach_file_black_24dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/persyaratan"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:background="@color/lightgrayline"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/persyaratan_daftar_ulang_mahasiswa_baru"
                    android:padding="5dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="160dp"
            android:id="@+id/mFAQ"
            android:onClick="faq"
            android:layout_height="190dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:background="@drawable/circlepink"
                    android:src="@drawable/ic_attach_file_black_24dp"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/faq"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:background="@color/lightgrayline"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/frequently_ask_questions"
                    android:padding="5dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>